--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "grunt-shell": "^0.7.0",
     "grunt-css": "^0.5.4",
     "typescript": "^1.0.0"
+  },
+  "devDependencies": {
+    "grunt-contrib-less": "^1.2.0"
   }
 }
