--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "jquery.bracket",
-  "version": "1.0.0",
-  "dependencies": {
+  "version": "1.0.1",
+  "devDependencies": {
+    "grunt-contrib-less": "^1.2.0",
+    "grunt-contrib-connect": "^0.11.2",
+    "grunt-contrib-watch": "~0.6.1",
     "grunt-cli": "^0.1.13",
     "grunt": "^0.4.4",
     "grunt-contrib-uglify": "^0.4.0",
@@ -11,9 +14,7 @@
     "grunt-typescript": "^0.3.4",
     "grunt-shell": "^0.7.0",
     "grunt-css": "^0.5.4",
-    "typescript": "^1.0.0"
-  },
-  "devDependencies": {
-    "grunt-contrib-less": "^1.2.0"
+    "typescript": "^1.0.0",
+    "grunt-notify": "^0.4.1"
   }
 }
